# RK3568_YOLOv8_IMX415

./: .gitignore  CMakeLists.txt  README.md  build.sh
config/: config.json
docs/: architecture.md  deployment.md  mqtt_protocol.md  performance.md
include/: alarm.h  capture.h  common.h  config.h  inference.h  metrics.h  rule_engine.h  snapshot.h
scripts/: install_service.sh  run_pipeline.sh  run_web.sh
service/: edge-person-monitor.service  edge-person-web.service
src/: alarm.cpp  capture.cpp  config.cpp  inference.cpp  main.cpp  metrics.cpp  rule_engine.cpp  snapshot.cpp  web_viewer.cpp
tests/: test_rule_engine.cpp
